@@ -18,14 +18,14 @@ case $1 in
 		rm -f rsyslogd.started work-*.conf
 		rm -f rsyslogd2.started work-*.conf
 		rm -f work rsyslog.out.log rsyslog.out.log.save # common work files
-		rm -rf test-spool
+		rm -rf test-spool test-logdir
 		rm -f core.* vgcore.*
 		mkdir test-spool
 		;;
    'exit')	rm -f rsyslogd.started work-*.conf diag-common.conf
    		rm -f rsyslogd2.started diag-common2.conf
 		rm -f work rsyslog.out.log rsyslog.out.log.save # common work files
-		rm -rf test-spool
+		rm -rf test-spool test-logdir
 		echo  -------------------------------------------------------------------------------
 		;;
    'startup')   # start rsyslogd with default params. $2 is the config file name to use
